@@ -130,9 +130,11 @@ def _get_default_identity():
         fullname = None
     else:
         try:
-            fullname = pwd.getpwnam(username).pw_gecos.split(',')[0].decode('utf-8')
+            gecos = pwd.getpwnam(username).pw_gecos
         except KeyError:
             fullname = None
+        else:
+            fullname = gecos.split(',')[0].decode('utf-8')
     if not fullname:
         fullname = username
     email = os.environ.get('EMAIL')
