@@ -13,6 +13,11 @@
  * Add support for ``prune`` and ``prune_tags`` arguments
    to ``porcelain.fetch``. (Jelmer Vernooĳ, #681)
 
+ BUG FIXES
+
+  * Fix handling of race conditions when new packs appear.
+    (Jelmer Vernooĳ)
+
 0.19.10	2018-01-15
 
  IMPROVEMENTS
